# cookiecutter

./: .bandit  .deepsource.toml  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .safety-policy.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  BACKERS.md  BACKERS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  __main__.py  appveyor.yml  bitore.sig  case_studies.md  case_studies.rst  codecov.yml  cookiecutter.spec  executable_script.py  from googletrans import Translator import os  gitmodules  justfile  noxfile.py  pyproject.toml  pytest.ini  (+9 more)
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  labels.yml  release-drafter.yml  sonarcloud.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml
.github/workflows/: coverage.yml  docs.yml  drafter.yml  executables.yml  main.yml  pip-publish.yml  publish.yml  python-app.yml  release-drafter.yml  sonarcloud.yml  test.02.yml  tests.yml
CHANGELOG/: 0.1.0.md  0.2.1.md  0.2.md  0.3.md  0.4.md  0.5.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  0.7.0.md  0.7.1.md  0.7.2.md  0.8.0.md  0.9.0.md  1.0.0.md  1.1.0.md  1.2.1.md  1.3.0.md  1.4.0.md  1.5.0.md  1.5.1.md  1.6.0.md  1.7.0.md  1.7.1.md  1.7.2.md  2.0.1.md  2.0.2.md  2.1.0.md  2.1.1.md  2.2.0.md  2.2.2.md  2.2.3.md  2.3.0.md  2.3.1.md  2.4.0.md  2.5.0.md  2.6.0.md  2.7.0.md  (+1 more)
appveyor/: install.ps1  setup_build_env.cmd
bar/: README.rst
cookiecutter/: VERSION.txt  __init__.py  __main__.py  cleanup.py  cli.py  compat.py  config.py  config_parser.py  context.py  cookie_pick.py  cookiecutter.py  cookiecuttereval.py  crypto.py  environment.py  exceptions.py  extensions.py  filters.py  find.py  generate.py  hooks.py  log.py  main.py  option.py  parsers.py  plugins.py  prompt.py  replay.py  repository.py  schema.py  serialization.py  settings.py  update.py  utils.py  vcs.py  zipfile.py
cookiecutter/stubs/: __init__.py  cookiecutter.py
cookieninja/: __init__.py  __main__.py  cli.py  config.py  environment.py  find.py  generate.py  hooks.py  log.py  main.py  prompt.py  replay.py  repository.py  utils.py  vcs.py  zipfile.py
docs/: AUTHORS.md  BACKERS.md  CODE_OF_CONDUCT.md  HISTORY.md  Makefile  __init__.py  advanced_usage.rst  authors.rst  case_studies.md  case_studies.rst  ccext.py  cli_options.rst  conf.py  contributing.rst  contributor_guidelines.rst  contributor_setup.rst  contributor_testing.rst  contributor_tips.rst  cookiecutter.rst  cookieninja.rst  core_committer_guide.rst  first_steps.rst  history.rst  hooks.rst  index.rst  installation.rst  make.bat  modules.rst  overview.rst  readme.rst  requirements.txt  sprint-contributors.rst  troubleshooting.rst  tutorial1.rst  tutorial2.rst  tutorials.rst  types_of_contributions.rst  usage.rst
docs/HelloCookieCutter1/: Readme.rst  cookiecutter.json
docs/_templates/: package.rst_t
docs/advanced/: boolean_variables.rst  calling_from_python.rst  choice_variables.rst  cli_options.rst  conditional_variables.rst  cookie_pick.rst  copy_without_render.rst  dependent_questions.rst  dict_variables.rst  directories.rst  dynamic_python_hooks.rst  hooks.rst  human_readable_prompts.rst  index.rst  injecting_content.rst  injecting_context.rst  jinja2_custom_delimiter.rst  jinja_env.rst  jinja_environment.rst  loading_custom_filters.rst  local_extensions.rst  nested_config_files.rst  new_line_characters.rst  optional_output.rst  private_variables.rst  replay.rst  repo_subdirectories.rst  single_file_templates.rst  suppressing_prompts.rst  symlinks.rst  template_extensions.rst  templates.rst  templates_in_context.rst  user_config.rst
docs/schemas/: template_config.json  user_config.json
docs/tutorials/: first_steps.rst  index.rst  tutorial1.rst  tutorial2.rst
docs_md/advanced/: calling_from_python.md  choice_variables.md  cli_options.md  copy_without_render.md  dict_variables.md  hooks.md  index.md  injecting_context.md  replay.md  suppressing_prompts.md  template_extensions.md  templates_in_context.md  user_config.md
python_project/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETE_ME.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
python_project/docker/: Dockerfile  README.md
python_project/docs/: README.md  package.json
python_project/tests/test_example/: test_hello.py
requirements/: base_test.txt  test_26.txt  test_27.txt  test_34.txt
smell_results/: cookiecutter_class_module_metrics.json  cookiecutter_design_smells.json  cookiecutter_function_metrics.json  cookiecutter_implementation_smells.json
snap/: snapcraft.yaml
tests/: __init__.py  conftest.py  skipif_markers.py  support.py  test_abbreviation_expansion.py  test_abort_generate_on_hook_error.py  test_arg_parsing.py  test_cleanup.py  test_cli.py  test_compat.py  test_config.py  test_context.py  test_context_config.py  test_cookiecutter.py  test_cookiecutter_invocation.py  test_cookiecutter_local_no_input.py  test_cookiecutter_local_with_input.py  test_cookiecutter_nested_templates.py  test_cookiecutter_repo_arg.py  test_cookiecutters.py  test_crypto.py  test_custom_extensions_in_hooks.py  test_default_extensions.py  test_dump_input.py  test_environment.py  test_evaluate.py  test_examples.py  test_examples_repo_arg.py  test_exceptions.py  test_find.py  test_find_multiple.py  test_generate.py  test_generate_context.py  test_generate_context_v2.py  test_generate_copy_without_render.py  test_generate_copy_without_render_override.py  test_generate_file.py  test_generate_files.py  test_generate_hooks.py  test_generate_symlinks.py  (+46 more)
tests/config/: invalid-config.yaml  test-config.json
tests/fake-multi-repo-dir/: cookiecutter.json
tests/fake-nested-templates/: cookiecutter.json
tests/fake-nested-templates-old-style/: cookiecutter.json
tests/fake-repo-bad/: no-project-in-here.txt
tests/fake-repo-bad-json/: cookiecutter.json
tests/fake-repo-crypto-pre/: cookiecutter.json
(+265 files in other folders)
